<resources>
    <string name="app_name">fairer</string>
    <string name="add_todo_direct_btn_text">집안일 직접 입력하기</string>
    <string name="next_btn_text">다음</string>
    <string name="add_todo_dialog_title">같은 공간만 선택할 수 있어요</string>
    <string name="add_todo_dialog_desc">다른 공간을 선택하시면 이미 선택한 집안일이\n삭제 됩니다. 다른 공간을 선택하시겠어요?</string>
    <string name="add_todo_task">세부 집안일</string>
    <string name="add_todo_info">공간을 선택하면 세부 집안일이 나옵니다.</string>
    <string name="add_todo_info2">원하는 집안일이 없나요?</string>
    <string name="add_todo_default_time">하루 종일</string>
    <string name="add_todo_done_btn_txt">집안일 추가 완료</string>
    <string name="add_direct_todo_title">집안일 제목</string>
    <string name="add_direct_todo_title_hint">직접 입력</string>
    <string name="add_direct_todo_time">시간설정</string>
    <string name="add_direct_todo_day">다른 날에도 이 집안일 하기</string>
    <string name="remove_todo_tv">삭제</string>
    <string name="edit_todo_btn_tv">수정 완료</string>
    <string name="add_direct_todo_repeat">반복하기</string>
    <string name="add_direct_todo_repeat_every_month">매달 반복하기</string>
    <string name="dialog_repeat_title_delete">반복 일정 삭제</string>
    <string name="dialog_repeat_title_modify">반복 일정 수정</string>
    <string name="dialog_repeat_current_schedule">이 일정</string>
    <string name="dialog_repeat_after_schedules">이 일정 및 향후 일정</string>
    <string name="dialog_repeat_all_schedules">모든 일정</string>
    <string name="dialog_repeat_cancel">취소</string>
    <string name="dialog_repeat_delete">삭제</string>
    <string name="dialog_repeat_modify">수정</string>
    <string name="add_housework_assignee_sign_tv">집안일 담당자</string>
    <string name="assignee_bottom_sheet_title">집안일 담당자 선택</string>
    <string name="assignee_bottom_sheet_cancel_text">취소</string>
    <string name="assignee_bottom_sheet_ok_text">확인</string>
    <string name="add_assignee_toast_text">집안일 담당자를 지정해주세요.</string>
    <string name="add_house_repeat_cycle">반복주기</string>
    <string name="add_house_describe_repeat">에 반복해요</string>
    <string name="add_house_repeat_weekly">매주</string>
    <string name="add_house_repeat_monthly">매달</string>
    <string name="fairer_dialog_cancel_btn_text">취소</string>
    <string name="fairer_dialog_ok_btn_text">확인</string>
    <string name="fairer_dialog_logout_btn_text">로그아웃</string>
    <string name="fairer_dialog_sign_out_btn_text">탈퇴하기</string>
    <string name="fairer_dialog_exit_btn_text">그룹 나가기</string>
    <string name="fairer_dialog_delete_title">집안일을 삭제하시겠어요?</string>
    <string name="fairer_dialog_delete_desc">삭제하시면 다시 복구할 수 없습니다.</string>
    <string name="fairer_dialog_logout_title">로그아웃 하시겠습니까?</string>
    <string name="fairer_dialog_sign_out_title">탈퇴하시겠습니까?</string>
    <string name="fairer_dialog_exit_title">정말 나가시겠습니까?</string>
    <string name="fairer_dialog_exit_desc">모든 집안일 기록이 사라집니다.</string>
    <string-array name="day_array">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>
    <string-array name="repeat_cycle_array">
        <item>매주</item>
        <item>매달</item>
    </string-array>
    <string name="time">오후 9:30</string>
    <string name="task">이불 정리</string>
    <string name="user_name">%s님</string>
    <string name="complete_chore">이번주에 %s개나 해주셨어요!</string>
    <string name="complete_chore_yet">아직 집안일을 하지 않으셨네요.</string>
    <string name="completed_chore">끝낸 집안일 %s</string>
    <string name="empty_chore_title">해야 할 집안일이 없어요</string>
    <string name="done_chore_title">오늘 집안일을 다 마쳤어요</string>
    <string name="add_chore_empty_description">집안일을 추가해 보세요!</string>
    <string name="add_chore_done_description">fairer한 하루를 보내셨군요!</string>
    <string name="rule">규칙</string>
    <string name="rule_place_holder">여기를 눌러 하우스의 규칙을 입력해주세요</string>
    <string name="main_today">오늘</string>
    <string name="main_complete">완료</string>
    <string name="main_back_chore">되돌리기</string>
    <string name="label_statistics_btn">통계화면으로 이동</string>
    <string name="statistics_month_title">%s월 통계</string>
    <string name="statistics_title">이번달 &lt;font color="#0C6DFF">%s&lt;/font>님이 &lt;br>가장 많은 집안일을 완료했어요!</string>
    <string name="statistics_title_empty">이번달에 완료하신 집안일이 없습니다🥲</string>
    <string name="statistics_check_info">이번달 집안일 현황을 확인해보세요</string>
    <string name="statistics_total_chores">전체 집안일 수행 &lt;font color="#0C6DFF">%d회 &lt;/font></string>
    <string name="statistics_count">%d개</string>
    <string name="statistics_total_complete">총 %d회 완료</string>
    <string name="server_client_id">720771356142-qae75m7290099120eqfih689376on2or.apps.googleusercontent.com</string>
    <string name="login_text">Google 계정으로 로그인</string>
    <string name="login_logo_text">평화로운 집안일,\n페어러가 도와줄게요</string>
    <string name="sign_name_text">이름을 입력해주세요.</string>
    <string name="sign_name_hint">예) 홍길동</string>
    <string name="sign_name_next_btn_text">입력 완료</string>
    <string name="sign_name_error">&amp;,!,#,@,^와 같은 특수문자는 입력하실 수 없어요.</string>
    <string name="sign_name_text_over_error">텍스트는 5글자를 초과하여 입력하실 수 없어요.</string>
    <string name="sign_group_text_over_error">텍스트는 16글자를 초과하여 입력하실 수 없어요.</string>
    <string name="sign_invite_text_over_error">텍스트는 12글자를 초과하여 입력하실 수 없어요.</string>
    <string name="sign_name_blank" />
    <string name="sign_profile_text">프로필 사진을 골라주세요.</string>
    <string name="sign_profile_select_text">기본 프로필 선택</string>
    <string name="sign_profile_next_btn_text">선택 완료</string>
    <string name="setting_profile_status_hint">상태 메세지를 입력해주세요.</string>
    <string name="join_group_main_text">안녕하세요. %s님!\n새로 하우스를 만들거나 참여해주세요.</string>
    <string name="join_group_make_space">집안일 하우스 생성</string>
    <string name="join_group_make_space_button">집안일 하우스 만들기</string>
    <string name="join_group_make_space_info">개인 혹은 여러명이 집안일을 관리할 수 있는\n하우스를 만들 수 있습니다.</string>
    <string name="join_group_join_space">하우스 참여</string>
    <string name="join_group_join_space_button">집안일 하우스 참여하기</string>
    <string name="join_group_join_space_info">기존에 만들어진 하우스에 참여하고 싶다면\n선택해주세요.</string>
    <string name="setting_header_title">설정</string>
    <string name="setting_account_row_text">계정</string>
    <string name="setting_space_row_text">하우스 관리</string>
    <string name="setting_alarm_row_text">알림</string>
    <string name="setting_contact_row_text">문의하기</string>
    <string name="setting_info_row_text">정보</string>
    <string name="setting_version_row_text">버전</string>
    <string name="setting_logout_row_text">로그아웃</string>
    <string name="setting_sign_out_row_text">탈퇴하기</string>
    <string name="setting_profile_name">이름</string>
    <string name="setting_profile_title">프로필을 설정해주세요.</string>
    <string name="setting_profile_sub_title">상태 메세지</string>
    <string name="setting_profile_text_over_error">텍스트는 20글자를 초과하여 입력하실 수 없어요.</string>
    <string name="alarm_housework_text">설정 시간에 맞춰서 알림</string>
    <string name="alarm_remain_text">미완료 집안일 리마인드</string>
    <string name="alarm_morning_text">기본 아침 알림</string>
    <string name="invite_main_title">하우스에 사람을 초대해주세요.</string>
    <string name="invite_main_desc">앞으로 함께 집안일을 관리할 가족, 친구, 룸메이트 누구든 초대해주세요!</string>
    <string name="invite_group_name_text">%s의 초대코드</string>
    <string name="invite_btn_text_copy">초대코드 복사하기</string>
    <string name="invite_btn_text_share">카카오톡 공유하기</string>
    <string name="invite_btn_text_skip">건너뛰기</string>
    <string name="invite_code_copy_toast_text">코드를 클립보드에 복사했습니다.</string>
    <string name="invite_code_valid_period_text">%1$s까지 유효한 코드</string>
    <string name="invite_code_valid_sign_text">초대받은 사람은 해당 초대코드가 생성된 24시간 안에\n입력하셔야 합니다.</string>
    <string name="kakao_share_text">집안일 관리와 분담을 도와주는 필수 앱 페어러.</string>
    <string name="kakao_share_description">지금 가입하고 평화로운 집안일을 시작하세요.</string>
    <string name="kakao_share_button">초대 받기</string>
    <string name="contact_header_text">문의하기</string>
    <string name="contact_sign_text">궁금한 점이 있으신가요?</string>
    <string name="contact_sign_email">이메일</string>
    <string name="fairer_email"><u>faireran@gmail.com</u></string>
    <string name="contact_sign_instagram">Instagram</string>
    <string name="fairer_instagram"><u>\@fairer.official</u></string>
    <string name="fairer_instagram_link">https://www.instagram.com/fairer.official/</string>
    <string name="policy_header_title">정보</string>
    <string name="policy_content_text">@string/policy_script</string>
    <string name="KAKAO_NATIVE_APP_KEY">d16a9978adb770f94c7ba98df76bd292</string>
    <string name="group_name_sub_text">집의 특성을 잘 보여줄 수 있는 이름도 좋아요!</string>
    <string name="group_name_text">하우스의 이름을 입력해주세요.</string>
    <string name="group_name_hint">예) 즐거운 우리집</string>
    <string name="invite_code_text">초대코드를 입력해주세요.</string>
    <string name="invite_code_sub_text">초대코드를 입력 후 바로 공간에 참여할 수 있어요!</string>
    <string name="invite_code_hint">12글자 입력</string>
    <string name="disconnected_internet_title">인터넷에 연결되지 않았습니다.</string>
    <string name="disconnected_internet_subtitle">연결 확인 후 다시 시도해 주세요.</string>
    <string name="disconnected_network_title">서버가 점검 중입니다.</string>
    <string name="disconnected_network_subtitle">잠시 후 다시 시도해 주세요.</string>
    <string name="modify_group_name_text">하우스 이름 변경</string>
    <string name="modify_group_toast_massage">하우스 이름이 변경되었습니다.</string>
    <string name="manage_house_header_title">하우스 관리</string>
    <string name="manage_house_rename_text">하우스 이름 변경</string>
    <string name="manage_house_invite_text">초대하기</string>
    <string name="manage_house_exit_text">하우스에서 나가기</string>
    <string name="host_url">faireran.com</string>
    <string name="group_info_text">%s에 어서오세요!</string>
    <string name="group_info_sub_text">공간 참여자</string>
    <string name="name_ex">홍길동</string>
    <string name="group_info_next_button">참여 완료</string>
    <string name="failed_group_text">이미 그룹에 참여되어 있습니다.\n새로운 그룹에 참여하려면\n기존의 그룹에서 나가주세요.</string>
    <string name="failed_group_info_text">기존의 그룹에서 나가는 경로는\n\'설정>그룹 관리>그룹에서 나가기\' 입니다.</string>
    <string name="failed_group_button_text">메인으로 돌아가기</string>
    <string name="rule_hint">예) 밥은 다 먹은 사람이 치우기</string>
    <string name="rule_info">규칙은 최대 10개까지 만들 수 있습니다.</string>
    <string name="rule_subtitle">새로운 규칙</string>
    <string name="rule_title">하우스 규칙 설정</string>
    <string name="play_store_fairer">https://play.google.com/store/apps/details?id=com.depromeet.housekeeper</string>
    <string name="default_notification_channel_id">fairer-def59</string>
    <string name="fcm_add_member_title">%s님이 %s에 참여</string>
    <string name="feedback_urge_title">\'재촉하기\'를 누르면 상대방에게 \n해당 집안일을 재촉하는 알림이 갑니다.</string>
    <string name="feedback_urge_button">재촉하기</string>
    <string name="feedback_urge_button_cancel">취소</string>
    <string name="feedback_return_title">피드백이 모두 삭제됩니다. 그래도 되돌리시겠습니까?</string>
    <string name="feedback_return_botton">되돌리기</string>
    <string name="feedback_return_button_cancel">취소</string>
    <string name="feedback_text_feedback_title">텍스트 피드백 작성</string>
    <string name="feedback_modify_text_feedback_title">텍스트 피드백 수정</string>
    <string name="feedback_delete_text_feedback_title">텍스트 피드백 삭제</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback_bottom_sheet_hint">피드백을 입력하세요</string>
    <string name="roulette_participant">참여자</string>
    <string name="roulette_bottom_sheet_title">룰렛 참여자 선택</string>
    <string name="roulette_result_title">오늘의 담당자</string>
    <string name="roulette_result_content">님입니다</string>
    <string name="roulette_dialog_title">뒤로 가면 룰렛이 취소 돼요.</string>
    <string name="roulette_dialog_content">룰렛으로 담당자가 설정되지 않습니다.</string>
    <string name="roulette_again_button">다시하기</string>
    <string name="roulette_finish_button">끝내기</string>
    <string name="roulette_cta_button">룰렛 돌리기</string>
    <string name="bottom_sheet_roulette">룰렛으로 정하기</string>
</resources>