<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_white_background">

        <include
            android:id="@+id/contact_header"
            layout="@layout/layout_default_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/contact_sign_tv"
            style="@style/Title.T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/contact_sign_text"
            android:textColor="@color/gray_800"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_header" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_email_row"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_under_line"
            app:layout_constraintTop_toBottomOf="@id/contact_sign_tv">

            <TextView
                style="@style/Body.B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_sign_email"
                android:textColor="@color/gray_800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Body.B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:linksClickable="true"
                android:text="@string/fairer_email"
                android:textColor="@color/highlight"
                android:textColorLink="@color/highlight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_instagram_row"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_under_line"
            app:layout_constraintTop_toBottomOf="@id/contact_email_row">

            <TextView
                style="@style/Body.B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_sign_instagram"
                android:textColor="@color/gray_800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contact_instagram_tv"
                style="@style/Body.B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fairer_instagram"
                android:textColor="@color/highlight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
