<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.join.JoinGroupFragment">

        <include
            android:id="@+id/join_group_header"
            layout="@layout/layout_default_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/join_group_main_text"
            style="@style/Heading.H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:bufferType="spannable"
            android:text="@string/join_group_main_text"
            android:textColor="@color/gray_800"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/join_group_header" />


        <TextView
            android:id="@+id/join_group_main_space"
            style="@style/Title.T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/join_group_make_space"
            android:textColor="@color/gray_600"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/join_group_main_text"
            app:layout_constraintTop_toBottomOf="@id/join_group_main_text" />

        <Button
            android:id="@+id/join_group_make_space_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_active_solid_background"
            android:text="@string/join_group_make_space_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/join_group_main_space" />

        <ImageView
            android:id="@+id/join_group_make_space_info_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:src="@drawable/ic_info_fill"
            app:layout_constraintStart_toStartOf="@id/join_group_main_text"
            app:layout_constraintTop_toBottomOf="@id/join_group_make_space_button" />

        <TextView
            android:id="@+id/join_group_make_space_info"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:maxWidth="300dp"
            android:text="@string/join_group_make_space_info"
            android:textColor="@color/gray_400"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/join_group_make_space_info_image"
            app:layout_constraintTop_toBottomOf="@id/join_group_make_space_button" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/normal"
            app:layout_constraintTop_toBottomOf="@id/join_group_make_space_info" />


        <TextView
            android:id="@+id/join_group_join_space"
            style="@style/Title.T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/join_group_join_space"
            android:textColor="@color/gray_600"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/join_group_main_text"
            app:layout_constraintTop_toBottomOf="@id/join_group_make_space_info" />

        <Button
            android:id="@+id/join_group_join_space_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/join_group_normal_background"
            android:text="@string/join_group_join_space_button"
            android:textColor="@color/gray_800"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/join_group_join_space" />

        <ImageView
            android:id="@+id/join_group_join_space_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:src="@drawable/ic_info_fill"
            app:layout_constraintStart_toStartOf="@id/join_group_main_text"
            app:layout_constraintTop_toBottomOf="@id/join_group_join_space_button" />

        <TextView
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/join_group_join_space_info"
            android:textColor="@color/gray_400"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/join_group_join_space_info"
            app:layout_constraintTop_toBottomOf="@id/join_group_join_space_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>