<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_assignee_bottom_sheet_dialog"
        android:padding="20dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="280dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:context=".ui.custom.dialog.AssigneeBottomSheetDialog">

        <TextView
            android:id="@+id/bottom_sheet_dlg_title"
            style="@style/Body.B1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignee_bottom_sheet_title"
            android:textColor="@color/gray_900"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_sheet_assignee_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:choiceMode="multipleChoice"
            android:minHeight="135dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bottom_sheet_dlg_cancel_btn"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_dlg_title"
            tools:listitem="@layout/item_bottom_sheet_assignee" />

        <TextView
            android:id="@+id/bottom_sheet_dlg_cancel_btn"
            style="@style/Body.B2"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:background="@drawable/home_positive_backgorund_8"
            android:gravity="center"
            android:text="@string/assignee_bottom_sheet_cancel_text"
            android:textColor="@color/highlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.48" />

        <TextView
            android:id="@+id/bottom_sheet_dlg_ok_btn"
            style="@style/Body.B2"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:background="@drawable/home_positive_backgorund_8"
            android:gravity="center"
            android:text="@string/assignee_bottom_sheet_ok_text"
            android:textColor="@color/highlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.48" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
