<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="144dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_dialog_feedback_urge_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tv_dialog_feedback_urge_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_500"
                android:textSize="12sp"
                android:text="@string/feedback_return_title"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>
            <View
                android:id="@+id/v_dialog_feedback_urge_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_100"
                app:layout_constraintTop_toBottomOf="@id/tv_dialog_feedback_urge_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/btn_dialog_feedback_urge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/v_dialog_feedback_urge_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/feedback_return_botton"
                android:textColor="@color/negative_20"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cl_dialog_feedback_urge_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:paddingVertical="8dp"
            android:background="@drawable/bg_dialog_feedback">
            <TextView
                android:id="@+id/btn_dialog_feedback_urge_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_urge_button_cancel"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="16sp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>